--- a/resources.qrc
+++ b/resources.qrc
@@ -8,5 +8,6 @@
         <file>resources/assetsGUI/Background.png</file>
         <file>resources/assetsGUI/Ia.png</file>
         <file>resources/assetsGUI/3412784.png</file>
+        <file>resources/models/sphere0.obj</file>
     </qresource>
 </RCC>
