First iteration at normal

--- a/resources.qrc
+++ b/resources.qrc
@@ -13,5 +13,7 @@
         <file>resources/GPUshaders/fshader_color.glsl</file>
         <file>resources/GPUshaders/fshader_depth.glsl</file>
         <file>resources/GPUshaders/vshader_depth.glsl</file>
+        <file>resources/GPUshaders/fshader_normal.glsl</file>
+        <file>resources/GPUshaders/vshader_normal.glsl</file>
     </qresource>
 </RCC>
