--- a/resources.qrc
+++ b/resources.qrc
@@ -28,5 +28,6 @@
         <file>resources/models/capsule.obj</file>
         <file>resources/models/suzanne.obj</file>
         <file>resources/models/f16.obj</file>
+        <file>resources/GPUshaders/vshader_blue_gouraud_blinn_phong.glsl</file>
     </qresource>
 </RCC>
