--- a/resources.qrc
+++ b/resources.qrc
@@ -30,5 +30,7 @@
         <file>resources/models/f16.obj</file>
         <file>resources/GPUshaders/fshader_nightvision.glsl</file>
         <file>resources/GPUshaders/vshader_nightvision.glsl</file>
+        <file>resources/GPUshaders/fshader_toon.glsl</file>
+        <file>resources/GPUshaders/vshader_toon.glsl</file>
     </qresource>
 </RCC>
