--- a/resources.qrc
+++ b/resources.qrc
@@ -34,5 +34,6 @@
         <file>resources/GPUshaders/vshader_nightvision.glsl</file>
         <file>resources/GPUshaders/fshader_toon.glsl</file>
         <file>resources/GPUshaders/vshader_toon.glsl</file>
+        <file>resources/GPUshaders/vshader_blue_gouraud.glsl</file>
     </qresource>
 </RCC>
